# OCR-Converter

./: pyproject.toml
src/: config.py  main.py  models.py
src/converter/: __init__.py  conv.py  convert_exception.py
src/form/: index.html  style.css
src/utils/: __init__.py  collector.py
tests/: conv_test.py
